<resources>
    <string name="app_name">Roucator</string>
    <string name="refresh">刷新</string>
    <string name="menu_item">菜单项</string>
    <string name="upload">上传</string>
    <string name="qrcode">生成二维码</string>
    <string name="username_placeholder">FocilvJoey</string>
    <string name="email_placeholder">focilvjoey@foxmail.com</string>
    <string name="manage">管理</string>
    <string name="manufacture">制造商</string>
    <string name="link_speed">连接速度</string>
    <string name="distance">距离</string>
    <string name="capability">加密方式</string>
    <string name="frequency_band">频段</string>
    <string name="channel_rating">信道评级</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearby_wifi">附近接入点</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="confirm_connection">确认连接</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="link_channel">信道</string>
    <string name="generate_qr_code">生成二维码</string>
    <string name="select_data_source">选择数据源</string>
    <string name="manual_input">手动输入</string>
    <string name="select_from_exist">已保存的项目</string>
    <string name="confirm">确认</string>
    <string name="input_information">输入信息</string>
    <string name="select">选择</string>
    <string name="none">无</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA/WPA2 PSK</string>
    <string name="wifi_name">网络名称</string>
    <string name="password">密码</string>
    <string name="connect">连接</string>
    <string name="connect_fail">连接失败</string>
    <string name="please_retry">请重试</string>
    <string name="save_to_local">保存到本地</string>
    <string name="would_you_save_to_local">要将此WiFi信息存在本地吗？</string>
    <string name="update">更新</string>
    <string name="show_password">显示密码</string>
    <string name="navigation_drawer_open">开启侧边菜单</string>
    <string name="navigation_drawer_close">关闭侧边菜单</string>
    <string name="log_in">登录</string>
    <string name="locate">定位</string>
    <string name="saved_item">保存的项目</string>
    <string name="scan_qr_code_to_connect">扫码连Wifi</string>
    <string name="delete_record">删除记录</string>
    <string name="do_you_confirm_to_delete">确认要删除吗？</string>
    <string name="please_login">请登录</string>
</resources>
